Upgraded to Dropwizard 1.0.0